style.css
* {
   margin: 0;
   padding: 0;
}

a {
   text-decoration: none;
}

ul {
   list-style: none;
}

body {
   font-family: 'Lato', sans-serif;
}

.header_flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 100%;
}

.container__left {
   margin-left: 235px;
}

.search__browse {
   justify-content: center;
   width: 87px;
   height: 38px;
   border-radius: 3px 0 0 3px;
   border: 1px solid #e6e6e6;
   background-color: #cdcdcc;
   background-image: linear-gradient(to bottom, #f9f9f9 0%, #f5f5f5 100%);
   color: #222222;
   font-size: 14px;
   font-weight: 300;
   /*line-height: 32px;*/
   letter-spacing: 0.35px;
   position: relative;
}

.header {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.17);
   border: 1px solid #ececec;
   background-color: #ffffff;
   height: 100px;
}

.container__right {
   margin-right: 231px;
}

.logo {
   width: 168px;
   text-decoration: none;
   color: #222222;
   font-size: 27px;
   font-weight: 300;
   /*line-height: 32px;*/
   text-transform: uppercase;
   margin-right: 37px;
}

.logo_1 {
   font-weight: 300;
   letter-spacing: 0.68px;
}

.logo_2 {
   color: #f16d7f;
   font-weight: 400;
   letter-spacing: 0.68px;
}

.header__form {
   display: flex;
}

.div_flex {
   display: flex;
   align-items: center;
   justify-content: center;
}

.logo__img {
   margin-right: 13px;
}

.cart__img {
   margin-right: 26px;
   padding-top: 9px;
}

.my_account {
   background-color: #f16d7f;
   color: #ffffff;
   font-size: 15px;
   font-weight: 400;
   /*line-height: 32px;*/
   height: 38px;
   width: 130px;
}

.menu__link {
   display: block;
   padding: 20px;
   color: #222222;
   font-size: 14px;
   font-weight: 700;
   /*line-height: 26px;*/
   text-transform: uppercase;
   text-decoration: none;
}

.menu {
   background-color: #ffffff;
   display: flex;
   justify-content: center;
   list-style: none;
}



.promo__text-big {
   font-size: 60px;
   letter-spacing: 1.5px;
}

.min {
   letter-spacing: 1px;
}

.promo__text-red {
   color: #f16d7f;
}

.promo__back {
   background: no-repeat url(img/Promo_img.png);
   background-position: 0 -50px;
   height: 100%;
   width: 100%;
   margin-left: 230px;
   justify-content: flex-start;
}

.promo__text {
   color: #222222;
   font-size: 40px;
   font-weight: 400;
   text-transform: uppercase;
}

.promo__line {
   height: 92px;
   width: 12px;
   background-color: #f16d7f;
   margin-right: 12px;
}

.promo {
   background-color: #e8e8e8;
   height: 613px;
}

.category {
   width: 100%;
   height: 100%;
   flex-direction: column;
   flex-wrap: wrap;
   width: 1160px;
   height: 843px;
}

.category__men {
   background-image: url(img/Categoty_img_men.png);
   width: 560px;
   height: 542px;
}

.category__women {
   background-image: url(img/Categoty_img_women.png);
   width: 560px;
   height: 261px;
}

.category__kids {
   background-image: url(img/Categoty_img_kids.png);
   width: 560px;
   height: 542px;
}

.category__accesories {
   background-image: url(img/Categoty_img_acc.png);
   width: 560px;
   height: 261px;
}

.category__margin {
   margin: 10px;
   display: flex;
   align-items: flex-start;
}

.categoties {
   margin-top: 88px;
}

.category__name {
   background-color: #ffffff;
   margin-top: 26px;
   padding-top: 16px;
   padding-left: 19px;
   padding-bottom: 16px;
   padding-right: 19px;
   color: #222222;
   font-size: 18px;
   font-weight: 400;
   text-transform: uppercase;
}

.category__name_1 {
   letter-spacing: 0.45px;
}

.category__name_2 {
   color: #f16d7f;
   font-size: 30px;
   letter-spacing: 0.75px;
}

.product__element {
   display: block;
   position: relative;
   width: 261px;
   margin-bottom: 39px;
}

.product__element:hover {
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
}

.product__element:hover .product__img {
   filter: brightness(50%);
}

.product__stars {
   position: absolute;
   right: 1px;
   bottom: 1px;
}

.product__content {
   position: relative;
   display: block;
}

.product__add {
   position: absolute;
   top: 98px;
   left: 70px;
   display: none;
   align-items: center;
   justify-content: center;
   border: 1px solid #ffffff;
   color: #ffffff;
   font-family: Lato;
   font-size: 13px;
   font-weight: 700;
   width: 123px;
   height: 39px;
}

.product__element:hover .product__add {
   display: flex;
}

.products__h2 {
   color: #9f9f9f;
   font-family: Lato;
   font-size: 14px;
   font-weight: 400;
   /*line-height: 54px;*/
   letter-spacing: 0.35px;
}

.products__h1 {
   font-family: Lato;
   font-size: 30px;
   font-weight: 700;
   /*line-height: 54px;*/
   letter-spacing: 0.75px;
}

.products__button {
   background-color: #f16d7f;
   color: #ffffff;
   font-family: Lato;
   font-size: 16px;
   font-weight: 700;
   /*line-height: 54px;*/
   letter-spacing: 0.4px;
   width: 212px;
   height: 48px;
   text-align: center;
}

.products__box {
   flex-wrap: wrap;
   width: 1139px;
   justify-content: space-between;
   margin-top: 60px;
}

.products {
   flex-direction: column;
   margin-top: 100px;
}

.products__header {
   flex-direction: column;
}

.product__name {
   color: #222222;
   font-family: Lato;
   font-size: 13px;
   font-weight: 400;
   text-transform: uppercase;
   margin-left: 14px;
   margin-top: 20px;
}

.product__price {
   color: #f16d7f;
   font-family: Lato;
   font-size: 16px;
   font-weight: 700;
   text-transform: uppercase;
   margin-left: 14px;
   margin-top: 17px;
   margin-bottom: 21px;
   > > > > > > > Stashed changes
}

.feature {
   margin-top: 113px;
}

.marketing {
   width: 373px;
   height: 415px;
   padding-bottom: 66px;
   padding-top: 48px;
   background-color: #222224;
   flex-direction: column;
   justify-content: space-around;
}

.feature__offer {
   background: no-repeat url(img/Feature_img.png);
   width: 767px;
   height: 529px;
}

.feature__text {
   margin-top: 146px;
   margin-left: 39px;
   color: #ffffff;
   font-family: Lato;
   font-weight: 700;
   text-transform: uppercase;
}
/* ... */

